--- a/webserver/package.json
+++ b/webserver/package.json
@@ -7,7 +7,8 @@
         "body-parser": "^1.15.2",
         "express": "^4.14.0",
         "jquery": "^3.4.1",
-        "multer": "^1.2.0"
+        "multer": "^1.2.0",
+        "python-shell": "^1.0.8"
     },
     "author": {
         "name": "JVacation"
